# CleanNet-Shield

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  LICENSE  README.md  RELEASE_NOTES.md  SIMPLE_PERSONAL_PLAN.md  VALIDATION_REPORT.json  bandit-report.json  cleannet_shield.db  debug_test.py  deploy.py  final_check.py  gui_simple_modern.py  launcher.py  main.py  pyproject.toml  requirements.txt  requirements_simple.txt  setup.py  test_core.py  test_phase3_gui.py  validate_deployment.py
.github/workflows/: ci.yml
archive/: STUDENT_EDITION_PLAN.md  debug_test.py  deploy.py  gui_modern  requirements_student.txt  setup_student_environment.py  test_core.py  validate_deployment.py
archive/docs/: CLEANUP_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  TEST_RESULTS.md  prd.md
archive/legacy_files/: DEPLOYMENT_SUCCESS.md  TESTING_COMPLETE.md  VALIDATION_REPORT.json  launcher.py  requirements.txt  setup.py
archive/legacy_files/scripts/: launch_admin.ps1  test_suite.py
archive/scripts/: setup.bat  start.bat  test_suite.py
blocker/: blocklist_updater.py  dns_config.py  hosts_blocker.py
config/: blocker_config.json
data/: recommendation_history.json  updater_config.json
docs/: CLEANUP_SUMMARY.md  INDUSTRY_UPGRADE_PLAN.md  INSTALLATION_GUIDE.md  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_2_READY.md  PHASE_3_COMPLETION.md  PHASE_3_UI_UX_ENHANCEMENTS.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TEST_RESULTS.md  prd.md
models/: domain_classifier.joblib
recovery/: accountability.py  journaling.py  streak_tracker.py
scripts/: deploy.bat  powershell_blocker.ps1  run_admin.bat
src/: __init__.py
src/core/: __init__.py
src/core/analytics/: dashboard.py
src/core/blocker/: __init__.py  advanced_blocker.py  ai_classifier.py  blocking_rule.py  blocklist_updater.py  dns_config.py  enhanced_blocking_service.py  enhanced_platform_manager.py  hosts_blocker.py  platform_manager.py
src/core/monitoring/: __init__.py  network_monitor.py
src/core/recovery/: accountability.py  journaling.py  recommendation_engine.py  relapse_predictor.py  streak_tracker.py
src/data/logs/: blocker_2025-06.json
src/database/: __init__.py  manager.py  models.py
src/gui/: advanced_dashboard.py  launcher.py  main_window.py  themes.py
src/utils/: logger.py  permissions.py
tests/unit/: test_blocker.py  test_phase2_complete.py  test_phase2_features.py
utils/: logger.py  permissions.py
