[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cleannet-shield"
version = "2.0.0"
description = "Industry-grade adult content blocker and recovery tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CleanNet Shield Team", email = "support@cleannetshield.com"}
]
maintainers = [
    {name = "CleanNet Shield Team", email = "support@cleannetshield.com"}
]
keywords = ["content-blocking", "recovery", "parental-controls", "wellness"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "PySide6>=6.6.0",
    "customtkinter>=5.2.0",
    "pywin32>=306; sys_platform == 'win32'",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "bcrypt>=4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "schedule>=1.2.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "sentry-sdk>=1.29.0",
    "prometheus-client>=0.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sqlite3; python_version < '3.12'",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-qt>=4.2.0",
    "coverage>=7.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "ipython>=8.15.0",
    "jupyter>=1.0.0",
    "debugpy>=1.8.0"
]
gui = [
    "PySide6>=6.6.0",
    "customtkinter>=5.2.0",
    "qdarktheme>=3.2.0",
    "pyqtgraph>=0.13.0"
]
ai = [
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0"
]
enterprise = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "flower>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/cleannet-shield/cleannet-shield"
Documentation = "https://cleannet-shield.readthedocs.io"
Repository = "https://github.com/cleannet-shield/cleannet-shield"
bug_tracker = "https://github.com/cleannet-shield/cleannet-shield/issues"
release_notes = "https://github.com/cleannet-shield/cleannet-shield/releases"

[project.scripts]
cleannet-shield = "src.main:main"
cleannet-shield-gui = "src.gui.main_window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
